# EventSnap

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PROGRESS.csv  README.md  docker-compose.yml  package-lock.json  package.json
.claude/agents/: db-schema-architect.md  face-pipeline-expert.md  privacy-auditor.md  project-tutor.md  secure-push.md  upload-pipeline-engineer.md
apps/web/: .env.example  README.md  package.json  tsconfig.json
apps/web/public/: manifest.webmanifest
apps/web/src/: auth.ts  middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/sign-in/: page.tsx
apps/web/src/app/(auth)/sign-up/: actions.ts  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/events/: page.tsx
apps/web/src/app/events/[code]/: actions.ts  copy-invite-button.tsx  event-qr.tsx  leave-event-button.tsx  page.tsx  upload-policy-form.tsx
apps/web/src/app/events/new/: actions.ts  page.tsx
apps/web/src/app/join/[code]/: page.tsx
apps/web/src/app/settings/: actions.ts  page.tsx  settings-form.tsx
apps/web/src/lib/: db.ts  events.ts
apps/worker/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/worker/src/eventsnap_worker/: __init__.py  config.py  main.py  worker.py
apps/worker/src/eventsnap_worker/jobs/: __init__.py
docs/: 00-glossary.md  01-architecture.md  README.md
docs/decisions/: 001-self-hosted-face-recognition.md  002-batch-processing-not-realtime.md  003-nextjs-pwa-not-native.md  README.md
